[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "flake8-rst-docstrings-sphinx"
version = "0.0.0"
description = "Extension to flake8-rst-docstrings to filter out warnings related to Sphinx's built in options."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/flake8-rst-docstrings-sphinx"
"Issue Tracker" = "https://github.com/domdfcoding/flake8-rst-docstrings-sphinx/issues"
"Source Code" = "https://github.com/domdfcoding/flake8-rst-docstrings-sphinx"

[tool.importcheck]
always = [
    "flake8_rst_docstrings_sphinx",
    "flake8_rst_docstrings_sphinx.__main__",
    "flake8_rst_docstrings_sphinx.domains",
]

[tool.whey]
base-classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "Topic :: Utilities",]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "flake8_rst_docstrings_sphinx"
